increase body padding to 5rem to prevent nav overlapping blog titles

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -39,7 +39,7 @@
 
 /* Offset content for fixed nav */
 body {
-  padding-top: 70px;
+  padding-top: 5rem;
 }
 
 /* Search icon color */
